name:                dicom
version:             0.3.0.1
synopsis:            A library for reading and writing DICOM files in the Explicit VR Little Endian transfer syntax.
license:             GPL-3
license-file:        LICENSE
homepage:            http://github.com/dicomgrid/dicom-haskell-library/
author:              Phil Freeman
maintainer:          paf31@cantab.net
copyright:           (c) DICOM Grid Inc. 2015
category:            Data, Medical
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.DICOM,
                       Data.DICOM.Dictionary,
                       Data.DICOM.FileMetaInformation,
                       Data.DICOM.Object,
                       Data.DICOM.Pretty,
                       Data.DICOM.Tag,
                       Data.DICOM.VL,
                       Data.DICOM.VR
  build-depends:       base,
                       time,
                       bytestring,
                       binary,
                       pretty,
                       safe
  hs-source-dirs:      src
  default-language:    Haskell98
